Updated model, new modules added of partner and Acetech

--- a/BatchReceving/Acetech/src/main/resources/application.properties
+++ b/BatchReceving/Acetech/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8081
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -5,10 +6,9 @@ spring.datasource.url = jdbc:h2:file:./database/batches
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=update
 
-spring.kafka.topic.name=batch_intimation
+spring.kafka.topic.name=batch_topic_local
 spring.kafka.producer.bootstrap-servers: localhost:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
